# django-next-template

./: LICENSE  README.md  docker-compose.yml  justfile
.github/workflows/: run-tests.yaml
backend/: .env  .env.local  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/backend/: settings.py
backend/core/: settings.py  urls.py
backend/core/management/commands/: wait_for_db.py
backend/core/migrations/: 0001_initial.py
backend/core/tests/: test_commands.py
backend/todos/: models.py  serializers.py  urls.py  views.py
backend/todos/migrations/: 0001_initial.py
backend/users/: authentication.py  models.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
backend/users/tests/: factories.py  test_models.py  test_views.py
frontend/: README.md  bun.lockb  next.config.js  package-lock.json  package.json  typings.d.ts
frontend/app/(auth)/auth/login/: page.tsx
frontend/app/(auth)/auth/register/: page.tsx
frontend/app/(auth)/password-reset/: page.tsx
frontend/app/(dashboard)/: layout.tsx
frontend/app/(dashboard)/_components/: mobile-sidebar.tsx  navbar.tsx  sidebar-item.tsx  sidebar-routes.tsx  sidebar.tsx  user-nav.tsx
frontend/app/(dashboard)/dashboard/: page.tsx
frontend/app/(dashboard)/todos/: page.tsx
frontend/app/(dashboard)/todos/_components/: todo-list.tsx
frontend/components/common/: Footer.tsx  Logo.tsx  Navbar.tsx  Select.tsx  SubmitButton.tsx
frontend/components/forms/: Input.tsx
frontend/hooks/: use-login.ts  use-register.ts  use-verify.ts
frontend/redux/: localStorage.tsx
frontend/redux/features/: authSlice.ts
frontend/redux/todos/: todosApiSlice.tsx
frontend/src/: next-auth.d.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/dashboard/: page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(main)/: layout.tsx
frontend/src/components/: app-sidebar.tsx  auth-provider.tsx  icons.tsx  login-form.tsx  main-nav.tsx  nav-user.tsx  providers.tsx  query-provider.tsx  signup-form.tsx  site-header.tsx  theme-toggle.tsx  user-auth-form.tsx
frontend/src/config/: site.ts
frontend/src/hooks/: use-auth.ts  useAuth.ts
frontend/src/tanstack/features/: auth.ts  client.ts
frontend/src/utils/: cookies.ts
frontend_old/: package.json  tsconfig.json  typings.d.ts
frontend_old/app/: layout.tsx  page.tsx
frontend_old/app/(auth)/: layout.tsx
frontend_old/app/(dashboard)/_components/: sidebar-routes.tsx  user-nav.tsx
frontend_old/components/forms/: Form.tsx
frontend_old/components/ui/: icon-badge.tsx  progress.tsx
frontend_old/redux/: provider.tsx  store.ts
frontend_old/redux/services/: apiSlice.ts
(+2 files in other folders)
